examples/errors/break_outside.rsp
; break must appear inside while/loop.
;;! error_at: 7:5
;;! error_contains: `break` outside of loop

(defn main [] -> i32
  (do
    (break)
    0))
